--- a/Image_Resize copy.ipynb
+++ b/Image_Resize copy.ipynb
@@ -19,8 +19,7 @@
     "from os import listdir\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "import os\n",
-    "import glob"
+    "import os\n"
    ]
   },
   {
